fixing an issue where the back button on the past mission menu could be covered up by the mission panel.

--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ transition-duration: 1s;
 text-align: center;
 display: flex;
 justify-content: center;
-margin: 0.5rem;
+margin: 7rem;
 }
 
 #version{
